--- a/clase3/dev/style.css
+++ b/clase3/dev/style.css
@@ -41,7 +41,7 @@ h1 {
 
 /* HEADER */
 header {
-  background-image: url(img/header.jpg);
+  background-image: url(images/header.webp);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
