--- a/clase4/dev/css/componentes.css
+++ b/clase4/dev/css/componentes.css
@@ -15,3 +15,40 @@
   color: #eeeeee;
   text-decoration: none;
 }
+
+/* COMPONENTE MAIN-WRAPPER */
+.main-wrapper {
+}
+
+/* COMPONENTE AREA-TRABAJO */
+.area-trabajo {
+  width: 75%;
+  float: right;
+  box-sizing: border-box;
+  padding: 10px;
+
+}
+
+/* COMPONENTE SIDEBAR */
+.sidebar {
+  background-color: #efefefff;
+  height: 500px;
+  width: 25%;
+  float: left;
+}
+
+.sidebar .sidebar-header {
+  text-align: center;
+  box-sizing: border-box;
+  padding: 50px;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.sidebar .sidebar-item {
+  text-align: center;
+  text-transform: uppercase;
+  padding: 20px;
+  box-sizing: border-box;
+}
