--- a/clase4/dev/css/componentes.css
+++ b/clase4/dev/css/componentes.css
@@ -1,11 +1,13 @@
 /* COMPONENTE BARRA MENU */
 .barra-menu {
   background-color: #073763ff;
+  position: fixed;
   color: #eeeeee;
   font-weight: bold;
-  height: 32px;
+  height: 52px;
   padding: 10px;
-
+  box-sizing: border-box;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,6 +20,7 @@
 
 /* COMPONENTE MAIN-WRAPPER */
 .main-wrapper {
+  padding-top: 52px;
 }
 
 /* COMPONENTE AREA-TRABAJO */
@@ -32,9 +35,10 @@
 /* COMPONENTE SIDEBAR */
 .sidebar {
   background-color: #efefefff;
-  height: 500px;
+  height: 100vh;
   width: 25%;
   float: left;
+  position: fixed;
 }
 
 .sidebar .sidebar-header {
@@ -51,4 +55,9 @@
   text-transform: uppercase;
   padding: 20px;
   box-sizing: border-box;
+}
+
+.sidebar .sidebar-item a {
+  color: black;
+  text-decoration: none;
 }
